--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       http-equiv="refresh"
-      content="0; url=https://repo.github.io/templates/index.html"
+      content="0; url=https://repo.github.io/Groupie-Tracker/index.html"
     />
   </head>
   <!-- <button class="mode-toggle">mode</button> -->
