changing message to identify the html message

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             );
 
             return response.text(
-              `Go server started successfully: http://localhost:8084`
+              ` from server: Go server started successfully: http://localhost:8084`
             );
           })
           .catch((error) => {
