button id missing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Click the button to start the Go server</h1>
-    <button onclick="startGoServer()">Run Go</button>
+    <button id="serverStatus" onclick="startGoServer()">Run Go</button>
 
     <script>
       function startGoServer() {
