--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           .then((data) => {
             document.getElementById(
               "serverStatus"
-            ).innerText = `Go server started successfully: http://localhost:8084`;
+            ).innerText = `http://localhost:8084`;
           })
           .catch((error) => {
             console.error("Error starting Go server:", error);
