--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
             return response.text();
           })
           .then((data) => {
-            document.getElementById(
-              "serverStatus"
-            ).innerText = `http://localhost:8084`;
+            //create a link to the server
+            const link = (document.createElement(
+              "a"
+            ).link.href = `http://localhost:8084`);
+            link.textContent = "Go Server started successfully";
+            document.body.appendChild(link);
           })
           .catch((error) => {
             console.error("Error starting Go server:", error);
